# bigtwo-rl

./: .gitignore  CLAUDE.md  FIXED_ACTION_SPACE_REFACTOR_PLAN.md  README.md  TECHNICAL_COMPARISON_REPORT.md  card_utils.py  evaluate.py  play_vs_agent.py  pyproject.toml  requirements.txt  rl_wrapper.py  simple_run.py  tournament.py  train_with_config.py
agents/: __init__.py  base_agent.py  greedy_agent.py  ppo_agent.py  random_agent.py
bigtwo_rl/: __init__.py  config.py
bigtwo_rl/agents/: __init__.py  balanced_agent.py  base_agent.py  fixed_action_greedy_agent.py  fixed_action_ppo_agent.py  fixed_action_random_agent.py  greedy_agent.py  human_agent.py  model_metadata.py  ppo_agent.py  random_agent.py
configs/: hyperparams.py  rewards.py
examples/: benchmark_multiprocessing.py  custom_observation_example.py  custom_reward_example.py  evaluate_agent.py  immediate_rewards_example.py  my_tournament.py  new_api_example.py  observation_api_example.py  play_vs_agent.py  smoke_train.py  tournament_example.py  tournament_parallel_example.py  train_agent.py
tests/: test_action_space.py  test_action_space_deterministic.py  test_beats_function.py  test_bigtwo_rules.py  test_cards.py  test_enhanced_library_integration.py  test_evaluation.py  test_fixed_action_integration.py  test_immediate_rewards.py  test_immediate_rewards_simple.py  test_move_quality_reward.py  test_multi_player_buffer.py  test_multi_player_gae_callback.py  test_multi_player_ppo.py  test_numpy_performance.py  test_observation.py  test_observation_space.py  test_optimization_impact.py  test_performance.py  test_rewards.py  test_training.py  test_unified_wrapper.py  test_wrapper.py
(+61 files in other folders)
